--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "shopping-cart",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://pekkabeast.github.io/shopping-cart/",
+  "homepage": "https://pekkabeast.github.io/shopping-cart/#",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
